fix whitespace at top and sides

--- a/web/fife_gen.css
+++ b/web/fife_gen.css
@@ -1,3 +1,6 @@
+* {
+    margin: 0;
+}
 #navbar {
     list-style-type: none;
     overflow: hidden;
